<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="userInfo"
            type="com.example.custodio_exer4_slambook.UserInfo" />
    </data>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/hello"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/hello"
            tools:layout_editor_absoluteX="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@={userInfo.name}"
                    android:textSize="24sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/nickname_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@={userInfo.nickname}"
                    android:textSize="24sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/age_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@={userInfo.age}"
                    android:textSize="24sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/thank_you"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/thank_you"
                    android:textSize="24sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/name"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/enter_name"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/nickname"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/nickname_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:hint="@string/enter_nickname"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/age"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/age_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:hint="@string/enter_age"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/when_is_your_birthday"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/birthday_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:hint="@string/enter_birthday"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/phone_number"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/phone_number_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:hint="@string/enter_phone_number"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/what_is_your_email_address"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/email_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:hint="@string/enter_email_address"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/course"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/what_is_your_course"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/course_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:hint="@string/enter_course"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/dream"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/what_is_your_ultimate_dream"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/dream_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:hint="@string/enter_dream"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/crush"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/who_is_your_secret_crush"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/crush_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:hint="@string/enter_name_of_crush"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/what_is_your_message_for_me"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/message_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/done"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#009688"
                    android:text="@string/done" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</layout>